5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1692_1105.log
== TEST (2019-04-25 18:52:07) 
-- CODE:
brasao = input("digite seu brasao: ")
e = "Entrada: "
c = "Casa: "
i = "Brasao invalido"

if brasao == lobo:
	print(e,brasao)
	print(c + "Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if brasao == lobo:
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:54:10) 
-- CODE:
brasao = input("digite seu brasao: ")
e = "Entrada: "
c = "Casa: "
i = "Brasao invalido"

if brasao == "lobo":
	print(e,brasao)
	print(c + "Stark")
elif brasao == "leao":
	print(e,brasao)
	print(c + "Lannister")
elif brasao == "veado":
	print(e,brasao)
	print(c + "Baratheon")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if brasao == lobo:
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:57:12) 
-- CODE:
brasao = input("digite seu brasao: ")
e = "Entrada: "
c = "Casa: "
i = "Brasao invalido"
print(e,brasao)
if brasao == "lobo":
	print(c + "Stark")
elif brasao == "leao":
	print(c + "Lannister")
elif brasao == "veado":
	print(c + "Baratheon")
elif brasao == "dragao":
	print(c + "Targaryen")
elif brasao == "rosa":
	print(c + "Tyrell")
elif brasao == "sol":
	print(c + "Martell")
elif brasao == "lula":
	print(c + "Greyjoy")
elif brasao == "esfolado":
	print(c + "Bolton")
elif brasao == "turta":
	print(c + "Tully")
else: 
	print(i)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:57:23) 
-- CODE:
brasao = input("digite seu brasao: ")
e = "Entrada: "
c = "Casa: "
i = "Brasao invalido"
print(e,brasao)
if brasao == "lobo":
	print(c + "Stark")
elif brasao == "leao":
	print(c + "Lannister")
elif brasao == "veado":
	print(c + "Baratheon")
elif brasao == "dragao":
	print(c + "Targaryen")
elif brasao == "rosa":
	print(c + "Tyrell")
elif brasao == "sol":
	print(c + "Martell")
elif brasao == "lula":
	print(c + "Greyjoy")
elif brasao == "esfolado":
	print(c + "Bolton")
elif brasao == "turta":
	print(c + "Tully")
else: 
	print(i)
-- EXECUTION TIME:
0.177635
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
